# maturin_deno_jsx_kivy

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
.github/workflows/: build-wheels.yml
src/: bridge.rs  lib.rs  main.rs  python_bridge.rs  runtime.rs  specs.rs
tools/: gen_definitions.py
ui/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: global.d.ts  kivy-reconciler.ts  main.tsx
